removed opacity on navlinks to see if it fixes visibility

--- a/react-app/src/components/Global/Elements/Navbar/navBar.css
+++ b/react-app/src/components/Global/Elements/Navbar/navBar.css
@@ -24,7 +24,7 @@
 .posts-link {
     background-image: url("../../../../images/explore-icon1.png");
     background-size: cover;
-    opacity: 70%;
+    /* opacity: 70%; */
     width: 22px;
     height: 22px;
 }
@@ -32,7 +32,7 @@
 .posts-link:hover {
     background-image: url("../../../../images/explore-icon1.png");
     background-size: cover;
-    opacity: 100%;
+    /* opacity: 100%; */
     width: 22px;
     height: 22px;
 }
@@ -40,7 +40,7 @@
 .home-link {
     background-image: url("../../../../images/home-icon.png");
     background-size: cover;
-    opacity: 70%;
+    /* opacity: 70%; */
     width: 22px;
     height: 22px;
 }
@@ -48,7 +48,7 @@
 .home-link:hover {
     background-image: url("../../../../images/home-icon.png");
     background-size: cover;
-    opacity: 100%;
+    /* opacity: 100%; */
     width: 22px;
     height: 22px;
 }
@@ -56,7 +56,7 @@
 .create-link {
     background-image: url("../../../../images/create-icon.png");
     background-size: cover;
-    opacity: 70%;
+    /* opacity: 70%; */
     width: 22px;
     height: 22px;
 }
@@ -64,7 +64,7 @@
 .create-link:hover {
     background-image: url("../../../../images/create-icon.png");
     background-size: cover;
-    opacity: 100%;
+    /* opacity: 100%; */
     width: 22px;
     height: 22px;
 }
